k8s/nginx-ingress/prod-frontend-ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-platform-resource
  namespace: production
spec:
  rules:
    - host: platform.airqo.net
      http:
        paths:
          - backend:
              serviceName: airqo-platform-svc
              servicePort: 80
    - host: calibrate.airqo.net
      http:
        paths:
          - backend:
              serviceName: airqo-calibrate-app-svc
              servicePort: 80
