k8s/nginx-ingress/stage-airqo-platform-ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stage-ingress-platform-resource
  namespace: staging
spec:
  rules:
    - host: staging.platform.airqo.net
      http:
        paths:
          - backend:
              serviceName: airqo-stage-platform-ui-svc
              servicePort: 80
