k8s/nginx-ingress/stage-frontend-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage-ingress-frontend-resource
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: staging.platform.airqo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-platform-ui-svc
                port: 
                  number: 80
    - host: staging.airqo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-website-svc
                port: 
                  number: 8000
    - host: staging.airqo.africa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-website-svc
                port: 
                  number: 8000
    - host: staging.calibrate.airqo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-calibrate-app-svc
                port: 
                  number: 80
